# Parallel_RISCV

./: CMakeLists.txt  main.cpp  test_decoder.cpp
include/: Decoder.h  ISA.h  Memory.h  RegFile.h
src/: Decoder.cpp  Memory.cpp  RegFile.cpp
